[#15] CSRF対策を設定

--- a/src/main/resources/templates/error-403.html
+++ b/src/main/resources/templates/error-403.html
@@ -10,7 +10,7 @@
         <div class="panel panel-danger errorPagePanel">
           <div class="panel-heading">HTTP 403</div>
           <div class="panel-body text-danger">
-            <i class="fa fa-exclamation-triangle"></i>権限がありません
+            <i class="fa fa-exclamation-triangle"></i>禁止された操作が行われました
           </div>
         </div>
       </div>
